--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -234,7 +234,7 @@
         - name: Disk Storage の予約
           href: ../../cost-management-billing/reservations/understand-disk-reservations.md
         - name: 仮想マシンとディスクのパフォーマンス
-          href: disk-performance-linux.md
+          href: ../disks-performance.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
         - name: 高パフォーマンス用の設計
           href: ../premium-storage-performance.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
         - name: ディスク バースト
@@ -869,7 +869,7 @@
           href: /azure/architecture/topics/high-performance-computing/
         - name: IBM Db2 pureScale
           items:
-            - name: アーキテクチャ
+            - name: Architecture
               href: ibm-db2-purescale-azure.md
             - name: デプロイ
               href: deploy-ibm-db2-purescale-azure.md
@@ -906,10 +906,8 @@
           href: snapshot-copy-managed-disk.md
         - name: Disk Storage の予約
           href: ../disks-reserved-capacity.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
-        - name: 増分スナップショットの作成 - CLI
-          href: disks-incremental-snapshots.md
-        - name: 増分スナップショットの作成 - ポータル
-          href: disks-incremental-snapshots-portal.md
+        - name: 増分スナップショットの作成
+          href: ../disks-incremental-snapshots.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
         - name: 非管理対象ディスクのバックアップ
           href: incremental-snapshots.md
         - name: 暗号化
@@ -943,7 +941,7 @@
             - name: ウルトラ ディスクの使用
               href: ../disks-enable-ultra-ssd.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
             - name: ディスクのベンチマークの実行
-              href: disks-benchmarks.md
+              href: ../disks-benchmarks.md?toc=/azure/virtual-machines/linux/toc.json&bc=/azure/virtual-machines/linux/breadcrumb/toc.json
         - name: アタッチされていないディスクの検出 - CLI
           href: find-unattached-disks.md
         - name: アタッチされていないディスクの検出 - ポータル
