commit translated contents

--- a/articles/defender-for-iot/TOC.yml
+++ b/articles/defender-for-iot/TOC.yml
@@ -230,7 +230,7 @@
         - name: Azure Security Center のドキュメント
           href: ../security-center/
         - name: Azure のセキュリティのドキュメント
-          href: 'https://docs.microsoft.com/azure/security/'
+          href: ../security/index.yml
         - name: Stack Overflow の Azure RTOS セキュリティ モジュール
           href: 'https://stackoverflow.com/questions/tagged/azure-rtos+azure-iot-security-module'
         - name: Azure IoT のセキュリティ、プライバシー、コンプライアンスのブログ
