--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -573,9 +573,13 @@
             - name: ITSM Connector での問題のトラブルシューティング
               items:
                 - name: 概要
+                  href: platform/itsmc-troubleshoot-overview.md
+                - name: ITSM Connector を同期する
                   href: platform/itsmc-resync-servicenow.md
                 - name: ダッシュボードでの調査
                   href: platform/itsmc-dashboard.md
+                - name: 一般的なエラー
+                  href: platform/itsmc-dashboard-errors.md
             - name: Secure Export との統合
               items:
                 - name: 概要
