--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -66,6 +66,8 @@
           href: sap-hana-backup-support-matrix.md
         - name: Azure ファイル共有のバックアップのサポート マトリックス
           href: azure-file-share-support-matrix.md
+        - name: Azure ディスク バックアップのサポート マトリックス
+          href: disk-backup-support-matrix.md
         - name: Active Directory ドメイン コントローラー
           href: active-directory-backup-restore.md
         - name: Azure Policy 向けにサポートされる VM SKU
@@ -82,6 +84,8 @@
           href: backup-azure-file-folder-backup-faq.md
         - name: FAQ - Azure Files のバックアップ
           href: backup-azure-files-faq.md
+        - name: FAQ- Azure ディスク バックアップ
+          href: disk-backup-faq.md
         - name: FAQ - Azure VM 上の SQL Server データベースのバックアップ
           href: faq-backup-sql-server.md
         - name: FAQ - Azure VM 上の SAP HANA データベースのバックアップ
@@ -210,6 +214,14 @@
               href: backup-azure-restore-system-state.md
         - name: 管理する
           href: backup-azure-manage-mars.md
+    - name: Azure ディスク バックアップ
+      items:
+        - name: 概要
+          href: disk-backup-overview.md
+        - name: バックアップ
+          href: backup-managed-disks.md
+        - name: 復元
+          href: restore-managed-disks.md
     - name: Azure ファイル共有のバックアップ
       items:
         - name: 概要
@@ -441,6 +453,8 @@
           href: backup-azure-scdpm-troubleshooting.md
         - name: Azure ファイル共有
           href: troubleshoot-azure-files.md
+        - name: Azure ディスク バックアップ
+          href: disk-backup-troubleshoot.md
         - name: SQL Server
           href: backup-sql-server-azure-troubleshoot.md
         - name: Azure VM での SAP HANA のバックアップ
