commit translated contents

--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -2076,16 +2076,18 @@
           href: envoy-provisioning-tutorial.md
         - name: Elium
           href: elium-provisioning-tutorial.md
-        - name: Figma
-          href: figma-provisioning-tutorial.md
         - name: フェデレーション ディレクトリ
           href: federated-directory-provisioning-tutorial.md
-        - name: Fuze
-          href: fuze-provisioning-tutorial.md
+        - name: Figma
+          href: figma-provisioning-tutorial.md
         - name: Flock
           href: flock-provisioning-tutorial.md
         - name: Foodee
           href: foodee-provisioning-tutorial.md
+        - name: Fortes Change Cloud
+          href: fortes-change-cloud-provisioning-tutorial.md
+        - name: Fuze
+          href: fuze-provisioning-tutorial.md
         - name: G Suite
           href: g-suite-provisioning-tutorial.md
         - name: GitHub
