--- a/articles/azure-functions/index.yml
+++ b/articles/azure-functions/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: ggailey777
   ms.author: azfundocs
   ms.date: 09/17/2019
-  ms.openlocfilehash: 74acabf21252acfd79520d7f24ff79503734a235
-  ms.sourcegitcommit: 5e762a9d26e179d14eb19a28872fb673bf306fa7
+  ms.openlocfilehash: 10c606ab86a577f22167197138e56a14d176b88a
+  ms.sourcegitcommit: 9d9221ba4bfdf8d8294cf56e12344ed05be82843
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 01/05/2021
-  ms.locfileid: "97901523"
+  ms.lasthandoff: 01/19/2021
+  ms.locfileid: "98570135"
 landingContent:
 - title: Azure Functions について
   linkLists:
@@ -45,7 +45,7 @@ landingContent:
     - text: はじめての Functions の作成 (Go)
       url: create-first-function-vs-code-other.md?tabs=go
     - text: はじめての Functions の作成 (Java)
-      url: create-first-function-vs-code-java.md
+      url: create-first-function-cli-java.md?tabs=bash%2Cazure-cli%2Cbrowser
     - text: はじめての Functions の作成 (JavaScript)
       url: create-first-function-vs-code-node.md
     - text: はじめての Functions の作成 (PowerShell)
