--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -420,6 +420,10 @@
           items:
             - name: Python
               href: flexible-server/connect-python.md
+            - name: Java
+              href: flexible-server/connect-java.md
+            - name: .NET
+              href: flexible-server/connect-csharp.md
     - name: チュートリアル
       items:
         - name: AKS を使用してビルドする
