--- a/articles/expressroute/TOC.yml
+++ b/articles/expressroute/TOC.yml
@@ -96,7 +96,7 @@
       href: expressroute-connect-azure-to-public-cloud.md
     - name: ネットワーク間接続
       href: cross-network-connectivity.md
-    - name: セキュリティ
+    - name: Security
       items:
         - name: セキュリティ ベースライン
           href: security-baseline.md
@@ -130,6 +130,8 @@
           href: expressroute-howto-macsec.md
     - name: ExpressRoute Global Reach を構成する
       items:
+        - name: Azure portal
+          href: expressroute-howto-set-global-reach.md
         - name: Azure PowerShell
           href: expressroute-howto-set-global-reach.md
         - name: Azure CLI
