--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -75,7 +75,7 @@
           href: /partner-center/payment-thresholds-methods-timeframes?context=/azure/marketplace/context/context
         - name: 支払い明細
           href: /partner-center/payout-statement?context=/azure/marketplace/context/context
-        - name: 支払いポリシーの詳細
+        - name: 支払いスケジュールとプロセス
           href: /partner-center/payout-policy-details?context=/azure/marketplace/context/context
         - name: 税の詳細
           href: /partner-center/tax-details-marketplace?context=/azure/marketplace/context/context
