--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -241,6 +241,9 @@
           href: /powershell/module/az.databox
         - name: .NET API
           href: /dotnet/api/overview/azure/databox/management
+        - name: Azure Policy の組み込み
+          displayName: 'samples, policies, definitions'
+          href: ./policy-reference.md
     - name: リソース
       items:
         - name: Data Box 製品
