--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -101,6 +101,8 @@
           href: ../expressroute/expressroute-howto-coexist-resource-manager.md?toc=%2fazure%2fvpn-gateway%2ftoc.json
         - name: プライベート ピアリングを介した VPN
           href: site-to-site-vpn-private-peering.md
+    - name: Azure と AWS のサイト間接続
+      href: create-vpn-azure-aws-managed-solutions.md
     - name: VNet 対 VNet 接続
       items:
         - name: VNet 間の接続の構成
