--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -140,10 +140,14 @@
           href: phone-authentication-user-flows.md
     - name: ID プロバイダー
       items:
+        - name: ローカル アカウント ID プロバイダー
+          href: identity-provider-local.md
+          displayName: 'Username, Email, Phone authorization, Phone sing-in'
         - name: ID プロバイダーの追加
           href: add-identity-provider.md
         - name: AD FS
           href: identity-provider-adfs.md
+          displayName: 'AD-FS, ADFS'
         - name: Amazon
           href: identity-provider-amazon.md
         - name: Azure AD (シングルテナント)
