--- a/articles/active-directory/app-provisioning/toc.yml
+++ b/articles/active-directory/app-provisioning/toc.yml
@@ -80,6 +80,8 @@
           href: sap-successfactors-integration-reference.md
         - name: SuccessFactors 属性のリファレンス
           href: sap-successfactors-attribute-reference.md
+        - name: Workday の統合
+          href: workday-integration-reference.md
         - name: Workday 属性のリファレンス
           href: workday-attribute-reference.md
         - name: プロビジョニング エージェントのバージョン履歴
