--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -101,7 +101,7 @@
           href: routing-preference-overview.md
         - name: パブリック IP のセキュリティ ベースライン
           href: public-ip-security-baseline.md
-    - name: セキュリティ
+    - name: Security
       items:
         - name: Virtual Network のセキュリティ ベースライン
           href: security-baseline.md
@@ -274,7 +274,7 @@
                       href: configure-routing-preference-virtual-machine-powershell.md
                     - name: Azure CLI
                       href: configure-routing-preference-virtual-machine-cli.md
-    - name: セキュリティ
+    - name: Security
       items:
         - name: ネットワーク トラフィックのフィルター処理
           items:
@@ -381,18 +381,28 @@
           href: virtual-machine-network-throughput.md
     - name: リージョン間で移動する
       items:
-        - name: ネットワーク セキュリティ グループ - ポータル
-          href: move-across-regions-nsg-portal.md
-        - name: ネットワーク セキュリティ グループ - PowerShell
-          href: move-across-regions-nsg-powershell.md
-        - name: 仮想ネットワーク - ポータル
-          href: move-across-regions-vnet-portal.md
-        - name: 仮想ネットワーク - PowerShell
-          href: move-across-regions-vnet-powershell.md
-        - name: パブリック IP - ポータル
-          href: move-across-regions-publicip-portal.md
-        - name: パブリック IP - PowerShell
-          href: move-across-regions-publicip-powershell.md
+        - name: ネットワーク セキュリティ グループ (NSG)
+          href: ../resource-mover/tutorial-move-region-virtual-machines.md?toc=%2fazure%2fvirtual-network%2ftoc.json
+        - name: 仮想ネットワーク
+          href: ../resource-mover/tutorial-move-region-virtual-machines.md?toc=%2fazure%2fvirtual-network%2ftoc.json
+        - name: ネットワーク インターフェイス (NIC)
+          href: ../resource-mover/tutorial-move-region-virtual-machines.md?toc=%2fazure%2fvirtual-network%2ftoc.json
+        - name: パブリック IP
+          href: ../resource-mover/tutorial-move-region-virtual-machines.md?toc=%2fazure%2fvirtual-network%2ftoc.json
+        - name: 手動移動
+          items:
+            - name: ネットワーク セキュリティ グループ - ポータル
+              href: move-across-regions-nsg-portal.md
+            - name: ネットワーク セキュリティ グループ - PowerShell
+              href: move-across-regions-nsg-powershell.md
+            - name: 仮想ネットワーク - ポータル
+              href: move-across-regions-vnet-portal.md
+            - name: 仮想ネットワーク - PowerShell
+              href: move-across-regions-vnet-powershell.md
+            - name: パブリック IP - ポータル
+              href: move-across-regions-publicip-portal.md
+            - name: パブリック IP - PowerShell
+              href: move-across-regions-publicip-powershell.md
     - name: NAT
       items:
         - name: NAT ゲートウェイの作成 - PowerShell
