commit translated contents

--- a/articles/active-directory/index.yml
+++ b/articles/active-directory/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.author: mtillman
   manager: daveba
   ms.date: 12/01/2020
-  ms.openlocfilehash: 5261d535170feb5c0aaac3731cd27e0af7847cfa
-  ms.sourcegitcommit: d60976768dec91724d94430fb6fc9498fdc1db37
+  ms.openlocfilehash: de96c1ed6828a6933102755d6c020cf01c4c9c7b
+  ms.sourcegitcommit: 8a74ab1beba4522367aef8cb39c92c1147d5ec13
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/02/2020
-  ms.locfileid: "96498049"
+  ms.lasthandoff: 01/20/2021
+  ms.locfileid: "98611153"
 highlightedContent:
   items:
   - title: Azure AD とは
@@ -82,19 +82,19 @@ conceptualContent:
     footerLink:
       url: ./authentication/index.yml
       text: 詳細情報
-  - title: クラウド プロビジョニング
+  - title: クラウドの同期
     links:
-    - url: ./cloud-provisioning/what-is-cloud-provisioning.md
+    - url: ./cloud-sync/what-is-cloud-sync.md
       itemType: overview
-      text: クラウド プロビジョニングとは
-    - url: ./cloud-provisioning/tutorial-single-forest.md
+      text: クラウド同期とは
+    - url: ./cloud-sync/tutorial-single-forest.md
       itemType: tutorial
       text: 単一のフォレストを単一の Azure AD テナントに統合する
-    - url: ./cloud-provisioning/how-to-install.md
+    - url: ./cloud-sync/how-to-install.md
       itemType: how-to-guide
-      text: Azure AD Connect クラウド プロビジョニング エージェントのインストール
+      text: Azure AD Connect プロビジョニング エージェントのインストール
     footerLink:
-      url: ./cloud-provisioning/index.yml
+      url: ./cloud-sync/index.yml
       text: 詳細情報
   - title: 条件付きアクセス
     links:
