--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -6,6 +6,8 @@
       href: automation-intro.md
     - name: よく寄せられる質問
       href: automation-faq.md
+    - name: 新機能
+      href: whats-new.md
 - name: クイックスタート
   items:
     - name: Automation アカウントを作成する
